# gcc_linker_example

./: CMakeLists.txt  README.md  main.c
lib_1/: CMakeLists.txt
lib_1/inc/: lib_1_main.h
lib_1/src/: lib_1_extra.c  lib_1_extra.h  lib_1_main.c
lib_2/: CMakeLists.txt
lib_2/inc/: lib_2_main.h
lib_2/src/: lib_2_extra.c  lib_2_extra.h  lib_2_main.c
